Name:           fac
Version:        0.2
Author:         Henning Günther
Maintainer:     Henning Günther <guenther@forsyte.at>
Synopsis:       The Fast Aiger Checker
Description:    A model checker for Aiger files developed for the "Software Model Checking" course @ TU Vienna in 2013.
Category:       Formal Methods
License:        GPL-3
License-File:   LICENSE
Build-Type:     Simple
Cabal-Version:  >= 1.6
Extra-Source-Files:
  minisat/CInterface.h
  minisat/CProof.h
  minisat/CTypes.h
  minisat/File.h
  minisat/Global.h
  minisat/Heap.h
  minisat/Proof.h
  minisat/Solver.h
  minisat/SolverTypes.h
  minisat/Sort.h
  minisat/VarOrder.h

Flag BrokenGCC
  Description:  Provide a workaround for gcc-4.5
  Default:      False

Executable fac
  Main-Is: Main.hs
  Build-Depends: base >= 3 && < 5,containers,mtl,array,tagged
  Extensions:    ForeignFunctionInterface,CApiFFI,GeneralizedNewtypeDeriving,DeriveFunctor,FlexibleContexts,DeriveTraversable,DeriveFoldable,ScopedTypeVariables
  Other-Modules:
    Minisat
    Formula
    Aiger
    Literal
    Simulator
    Unrolling
    Interpolation
  Include-Dirs: minisat
  Includes:
    CInterface.h
  C-Sources:
    minisat/CInterface.cpp
    minisat/Proof.cpp
    minisat/Solver.cpp
    minisat/File.cpp
    minisat/CProof.cpp
  Extra-Libraries: stdc++
  if flag(BrokenGCC)
    CC-Options: -fno-tree-pre

Source-Repository head
  Type:         git
  Location:     git://github.com/hguenther/fac.git
